--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,14 @@
   min-height: 80vh;
   display: block;
   margin: auto;
+}
 
+#deliver {
+  display: none; 
 }
 
 body { 
-  background-image: url("../img/spongebob-pizza-delivery1.jpg");
+  background-image: url("../img/pizza.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -17,7 +20,6 @@ body {
   min-height: 15vh;
   justify-content: center;
   font-size: 3rem;
-  color: white;
   text-align: center;
 }
 
