--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,43 @@
 #order {
-  padding: 1rem;
-  justify-content: center;
   min-height: 80vh;
   display: block;
   margin: auto;
 }
-
 #deliver {
   display: none; 
+  margin: auto;
+  padding: .5rem;
+  background-color: yellow;
+  text-align: center;
+  border: black .5rem solid;
 }
-#deliver p {
+#deliver p h2 {
   font-size: 3rem;
+  padding: .5rem;
 }
-
+img {
+  display: block;
+  margin: auto;
+  border: black .25rem solid;
+}
 body { 
   background-image: url("../img/pizza.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .heading {
   min-height: 15vh;
   justify-content: center;
   font-size: 3rem;
   text-align: center;
 }
-
 h1 {
   font-size: 5rem;
+}
+.clickable{
+  cursor: pointer;
+  color:midnightblue;
+}
+.spacing {
+  margin: 1rem;
 }
